--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   flutter_bloc: ^9.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
